--- a/templates/app/landing.html.twig
+++ b/templates/app/landing.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div {{ vue_component('CustomizerPage') }}></div>
+    <div {{ vue_component('Page/CustomizerPage') }}></div>
 {% endblock %}
