remove json output on SizeInput

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,23 @@
     {% endblock %}
 
     {% block javascripts %}
+
+        {% if app.environment == 'prod' %}
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQE45TFT73"></script>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
+
+                gtag('js', new Date());
+
+                gtag('config', 'G-JQE45TFT73');
+            </script>
+        {% endif %}
+
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
